Finished transcribing resume from Word version

--- a/resume.tex
+++ b/resume.tex
@@ -129,7 +129,7 @@ Python with TensorFlow and Caffe expeirience, MATLAB, C, Microsoft Office Suite,
 	{January 2017 - Present}
 	\begin{itemize}
 		\item
-		Worked with Professor Minh Do to develop online, unsupervised video object segmentation algorithm for the DAVIS dataset using clustering of dense optical flow (partnership with Sandia National Laboratories)	
+		Working with Professor Minh Do to develop online, unsupervised video object segmentation algorithm for the DAVIS dataset using clustering of dense optical flow (partnership with Sandia National Laboratories)	
 	\end{itemize}
 
 %% Massive MIMO (undergrad honors thesis)
@@ -264,6 +264,56 @@ Python with TensorFlow and Caffe expeirience, MATLAB, C, Microsoft Office Suite,
 	\end{itemize}
 
 %% Pep Band - UMN
+{\uline{Pep Band} \textit{(UMN)}}
 
+\headerrow
+	{\quad\textit{Member, University of Minnesota Gold Pep Band}}
+	{September 2013 - May 2016}
+	\begin{itemize}
+		\item Performed at men's basketball games and other sporting events, including several NCAA championship games (women's hockey and women's volleyball) and the Big Ten men's basketball tournament
+	\end{itemize}
+
+\headerrow
+	{\quad\textit{Member, University of Minnesota Gopher Pep Band}}
+	{September 2012 - May 2013}
+	\begin{itemize}
+		\item Perfored at women's hocky, women's basketball, and women's volleyball sporting events, including the women's hockey NCAA and WCHA championships
+	\end{itemize}
+
+%% Colleges Against Cancer - UMN
+{\uline{Colleges Against Cancer} \textit{(UMN)}}
+
+\headerrow
+	{\quad\textit{Director of Event Development}}
+	{May 2014 - May 2016}
+	\begin{itemize}
+		\item Orgainzed the 2015 and 2016 Relay for Life fundraisers at the University of Minnesota, with each having over 1,000 participants attending
+	\end{itemize}
+
+\headerrow
+	{\quad\textit{Chair of Event Logistics}}
+	{October 2013 - May 2014}
+	\begin{itemize}
+		\item Worked with the Director of Event Development to organize and coordinate the 2014 Relay for Life event at the University of Minnesota
+	\end{itemize}
+
+%% --- HONORS & AWARDS --- %%
+\begin{comment}
+\subsection*{HONORS \& AWARDS:}
+
+%% Undergrad
+{\uline{Undergraduate Awards}}
+\begin{itemize}
+	\item National Merit Scholarship
+	\item Gold Scholarship, University of Minnesota
+	\item Bentson Family Scholarship, University of Minnesota
+	\item Hartig Fund Scholarship, University of Minnesota
+	\item Red McCleod Scholarship, University of Minnesota
+	\item Undergraduate Research Award, University of Minnesota
+	\item Class AA "Triple A Award" Winner, Minnesota State High School League
+	\item Thomas J. Watson Scholarship, IBM
+	\item University HOnors Program Honors Student
+\end{itemize}
+\end{comment}
 
 \end{document}
