changed research interests and research experience order

--- a/resume.tex
+++ b/resume.tex
@@ -120,6 +120,14 @@ Honors: Summa Cum Laude with High Distinction
 Python with TensorFlow and Caffe expeirience, MATLAB, C, Microsoft Office Suite, \LaTeX
 \end{comment}
 
+%% --- RESEARCH INTERESTS --- %%
+\subsection*{\sansserif RESEARCH INTERESTS:}
+\begin{itemize}
+	\item Efficient sensor fusion for autonomous vehicles
+	\item Real-time video tracking and segmentation
+	\item Intuitive exploitation of sequential nature of videos for perception tasks
+\end{itemize}
+
 %% --- RESEARCH EXPERIENCE --- %%
 \subsection*{\sansserif RESEARCH EXPERIENCE:}
 
@@ -141,21 +149,13 @@ Python with TensorFlow and Caffe expeirience, MATLAB, C, Microsoft Office Suite,
 		Worked with Professor Gerald Sobelman on surveying and evaluating proposed massive MIMO detection algorithms and implementing one in Verilog for VLSI (project for Honors Thesis) 
 	\end{itemize}
 
-%% --- RESEARCH INTERESTS --- %%
-\subsection*{\sansserif RESEARCH INTERESTS:}
-\begin{itemize}
-	\item Efficient sensor fusion for autonomous vehicles
-	\item Real-time video tracking and segmentation
-	\item Intuitive exploitation of sequential nature of videos for perception tasks
-\end{itemize}
-
 %% --- PRIOR WORK EXPERIENCE --- %%
 \subsection*{\sansserif PRIOR WORK EXPERIENCE}
 
 %% Grad
 %% RA
 \headerrow
-	{\uline{Research Assistant} \textit{(UIUC - advisor: Prof. Minh Do)}}
+	{\uline{Research Assistant} \textit{(UIUC)}}
 	{August 2017 - Present}
 	\begin{itemize}
 		\item Developed online algorithm for unsupervised video object segmentation based on clustering of dense optical flow
