Fixed award typo

--- a/resume.tex
+++ b/resume.tex
@@ -312,7 +312,7 @@ Python with TensorFlow and Caffe expeirience, MATLAB, C, Microsoft Office Suite,
 	\item Undergraduate Research Award, University of Minnesota
 	\item Class AA "Triple A Award" Winner, Minnesota State High School League
 	\item Thomas J. Watson Scholarship, IBM
-	\item University HOnors Program Honors Student
+	\item University Honors Program Honors Student
 \end{itemize}
 \end{comment}
 
