updated classes, gpa, and skills: ROS & C++

--- a/resume.tex
+++ b/resume.tex
@@ -70,12 +70,14 @@ University of Illinois Urbana-Champaign
 
 College of Engineering
 
-GPA: 3.92
+GPA: 3.94
 
 \newlength{\mylength}
 \settowidth{\mylength}{Relevant Courseworks:}
 \hangindent=\mylength
-Relevant Coursework: Pattern Recognition, Digital Signal Processing II, Vector Space Signal Processing, Topics in Image Processing, Random Processes, Optimization for Computer Vision
+Relevant Coursework: Pattern Recognition, Digital Signal Processing II, Vector
+Space Signal Processing, Topics in Image Processing, Random Processes,
+Optimization for Computer Vision, Digital Imaging
 %% TODO fix hangindent issues
 \hangindent=0ex
 \\
@@ -90,12 +92,14 @@ University of Illinois Urbana-Champaign
 
 College of Engineering
 
-GPA: 3.92
+GPA: 3.94
 
 \newlength{\mylength}
 \settowidth{\mylength}{Relevant Courseworks:}
 \hangindent=\mylength
-Relevant Coursework: Pattern Recognition, Digital Signal Processing II, Vector Space Signal Processing, Topics in Image Processing, Random Processes, Optimization for Computer Vision
+Relevant Coursework: Pattern Recognition, Digital Signal Processing II, Vector
+Space Signal Processing, Topics in Image Processing, Random Processes,
+Optimization for Computer Vision, Digital Imaging
 %% TODO fix hangindent issues
 \hangindent=0ex
 \\
@@ -117,7 +121,7 @@ Honors: Summa Cum Laude with High Distinction
 %% --- SKILLS Section --- %%
 \begin{comment}
 \subsection*{\sansserif SKILLS:}
-Python with TensorFlow and Caffe expeirience, MATLAB, C, Microsoft Office Suite, \LaTeX
+Python with TensorFlow and Caffe expeirience, ROS, MATLAB, C, C++, Microsoft Office Suite, \LaTeX
 \end{comment}
 
 %% --- RESEARCH INTERESTS --- %%
