added radar-video fusion research project

--- a/resume.tex
+++ b/resume.tex
@@ -97,9 +97,7 @@ GPA: 3.94
 \newlength{\mylength}
 \settowidth{\mylength}{Relevant Courseworks:}
 \hangindent=\mylength
-Relevant Coursework: Pattern Recognition, Digital Signal Processing II, Vector
-Space Signal Processing, Topics in Image Processing, Random Processes,
-Optimization for Computer Vision, Digital Imaging
+Relevant Coursework: Pattern Recognition, Digital Signal Processing II, Vector Space Signal Processing, Topics in Image Processing, Random Processes, Optimization for Computer Vision, Digital Imaging
 %% TODO fix hangindent issues
 \hangindent=0ex
 \\
@@ -135,6 +133,15 @@ Python with TensorFlow and Caffe expeirience, ROS, MATLAB, C, C++, Microsoft Off
 %% --- RESEARCH EXPERIENCE --- %%
 \subsection*{\sansserif RESEARCH EXPERIENCE:}
 
+%% Radar-video fusion
+\headerrow
+    {\uline{RADAR-Video Fusion} \textit{(UIUC)}}
+    {November 2017 - Present}
+    \begin{itemize}
+        \item
+        Working with Professor Minh Do to develop fusion algorithms to generate high resolution depth maps from RADAR, video, and egomotion data for autonomous vehicle applications
+    \end{itemize}
+
 %% Video segmentation
 \headerrow
 	{\uline{Video Segmentation} \textit{(UIUC)}}
@@ -163,7 +170,10 @@ Python with TensorFlow and Caffe expeirience, ROS, MATLAB, C, C++, Microsoft Off
 	{August 2017 - Present}
 	\begin{itemize}
 		\item Developed online algorithm for unsupervised video object segmentation based on clustering of dense optical flow
-		\item Investigated real-time trackers based on discrimantive correlation filters
+		\item Investigated real-time trackers based on discriminative correlation filters
+        \item Developed RADAR-video fusion algorithms to generate high
+resolution depth maps using electronically scanning RADAR (ESR) sensors found on
+modern cars paired with video
 	\end{itemize}
 
 %% SwRI
@@ -179,7 +189,7 @@ Python with TensorFlow and Caffe expeirience, ROS, MATLAB, C, C++, Microsoft Off
 %% ECE 110 TAing
 \headerrow
 	{\uline{Introduction to Electronics Lab Teaching Assistant} \textit{(UIUC)}}
-	{August 2016 - Present}
+	{August 2016 - December 2017}
 	\begin{itemize}
 		\item Led basic electronics lab sessions weekly and graded lab reports weekly
 	\end{itemize}
