uncommented skills section, added Linux/Ubuntu

--- a/resume.tex
+++ b/resume.tex
@@ -117,10 +117,11 @@ College of Science and Engineering
 Honors: Summa Cum Laude with High Distinction
 
 %% --- SKILLS Section --- %%
-\begin{comment}
+%\begin{comment}
 \subsection*{\sansserif SKILLS:}
-Python with TensorFlow and Caffe expeirience, ROS, MATLAB, C, C++, Microsoft Office Suite, \LaTeX
-\end{comment}
+Python with TensorFlow and Caffe expeirience, MATLAB, ROS, C, C++, Microsoft
+	Office Suite, \LaTeX, Linux/Ubuntu
+%\end{comment}
 
 %% --- RESEARCH INTERESTS --- %%
 \subsection*{\sansserif RESEARCH INTERESTS:}
