added OpenCV to skills

--- a/resume.tex
+++ b/resume.tex
@@ -119,7 +119,7 @@ Honors: Summa Cum Laude with High Distinction
 %% --- SKILLS Section --- %%
 %\begin{comment}
 \subsection*{\sansserif SKILLS:}
-Python with TensorFlow and Caffe expeirience, MATLAB, ROS, C, C++, Microsoft
+Python with TensorFlow and Caffe expeirience, OpenCV, MATLAB, ROS, C, C++, Microsoft
 	Office Suite, \LaTeX, Linux/Ubuntu
 %\end{comment}
 
