added version control to skills

--- a/resume.tex
+++ b/resume.tex
@@ -119,14 +119,14 @@ Honors: Summa Cum Laude with High Distinction
 %% --- SKILLS Section --- %%
 %\begin{comment}
 \subsection*{\sansserif SKILLS:}
-Python with TensorFlow and Caffe expeirience, OpenCV, MATLAB, ROS, C, C++, Microsoft
-	Office Suite, \LaTeX, Linux/Ubuntu
+Python with TensorFlow and Caffe expeirience, OpenCV, MATLAB, ROS, C, C++,
+	Microsoft Office Suite, \LaTeX, Linux/Ubuntu, git, svn
 %\end{comment}
 
 %% --- RESEARCH INTERESTS --- %%
 \subsection*{\sansserif RESEARCH INTERESTS:}
 \begin{itemize}
-	\item Efficient sensor fusion for autonomous vehicles
+	\item Efficient sensor fusion, particularly for autonomous vehicles
 	\item Real-time video tracking and segmentation
 	\item Intuitive exploitation of sequential nature of videos for perception tasks
 \end{itemize}
