add QInF and modified to 1 page for qual report

--- a/resume.tex
+++ b/resume.tex
@@ -117,11 +117,11 @@ College of Science and Engineering
 Honors: Summa Cum Laude with High Distinction
 
 %% --- SKILLS Section --- %%
-%\begin{comment}
+\begin{comment}
 \subsection*{\sansserif SKILLS:}
 Python with TensorFlow and Caffe expeirience, OpenCV, MATLAB, ROS, C, C++,
 	Microsoft Office Suite, \LaTeX, Linux/Ubuntu, git, svn
-%\end{comment}
+\end{comment}
 
 %% --- RESEARCH INTERESTS --- %%
 \subsection*{\sansserif RESEARCH INTERESTS:}
@@ -130,6 +130,16 @@ Python with TensorFlow and Caffe expeirience, OpenCV, MATLAB, ROS, C, C++,
 	\item Real-time video tracking and segmentation
 	\item Intuitive exploitation of sequential nature of videos for perception tasks
 \end{itemize}
+
+
+%% --- AWARDS / FELLOWSHIPS --- %%
+\subsection*{\sansserif AWARDS}
+
+%% Qualcomm Innovation Fellowship
+\begin{itemize}
+	\item Qualcomm Innovation Fellowship 2018 Finalist
+\end{itemize}
+
 
 %% --- RESEARCH EXPERIENCE --- %%
 \subsection*{\sansserif RESEARCH EXPERIENCE:}
@@ -161,6 +171,7 @@ Python with TensorFlow and Caffe expeirience, OpenCV, MATLAB, ROS, C, C++,
 		Worked with Professor Gerald Sobelman on surveying and evaluating proposed massive MIMO detection algorithms and implementing one in Verilog for VLSI (project for Honors Thesis) 
 	\end{itemize}
 
+
 %% --- PRIOR WORK EXPERIENCE --- %%
 \subsection*{\sansserif PRIOR WORK EXPERIENCE}
 
@@ -169,6 +180,7 @@ Python with TensorFlow and Caffe expeirience, OpenCV, MATLAB, ROS, C, C++,
 \headerrow
 	{\uline{Research Assistant} \textit{(UIUC)}}
 	{August 2017 - Present}
+	\begin{comment}
 	\begin{itemize}
 		\item Developed online algorithm for unsupervised video object segmentation based on clustering of dense optical flow
 		\item Investigated real-time trackers based on discriminative correlation filters
@@ -176,6 +188,8 @@ Python with TensorFlow and Caffe expeirience, OpenCV, MATLAB, ROS, C, C++,
 resolution depth maps using electronically scanning RADAR (ESR) sensors found on
 modern cars paired with video
 	\end{itemize}
+	\end{comment}
+	\newline %comment out if including itemize info
 
 %% SwRI
 \headerrow
@@ -191,11 +205,15 @@ modern cars paired with video
 \headerrow
 	{\uline{Introduction to Electronics Lab Teaching Assistant} \textit{(UIUC)}}
 	{August 2016 - December 2017}
+	\begin{comment}
 	\begin{itemize}
 		\item Led basic electronics lab sessions weekly and graded lab reports weekly
 	\end{itemize}
+	\end{comment}
+	\newline %comment out if including itemize info
 
 %% Undergrad
+	\begin{comment}
 %% EE 2001 LA
 \headerrow
 	{\uline{Introduction to Circuits and Electronics Lecture Assistant} \textit{(UMN)}}
@@ -203,6 +221,7 @@ modern cars paired with video
 	\begin{itemize}
 		\item Held weekly office hours to help students learn the basics of circuits and electronics and graded exams
 	\end{itemize}
+
 
 %% EE 2301 LA
 \headerrow
@@ -230,7 +249,10 @@ modern cars paired with video
 		\item Tutored freshmen in Physics I \& II, Calculus I, II, \& III, and Linear Algebra at Frontier Residence Hall
 	\end{itemize}
 
+\end{comment}
+
 %% --- ACTIVITIES and LEADERSHIP EXPERIENCES --- %%
+\begin{comment}
 \subsection*{\sansserif{ACTIVITIES AND LEADERSHIP EXPERIENCES:}}
 
 %% HKN - UMN
@@ -311,6 +333,8 @@ modern cars paired with video
 	\begin{itemize}
 		\item Worked with the Director of Event Development to organize and coordinate the 2014 Relay for Life event at the University of Minnesota
 	\end{itemize}
+
+\end{comment}
 
 %% --- HONORS & AWARDS --- %%
 \begin{comment}
