updated resume w/ summer 2018 details, need to address indenting under SwRI info

--- a/resume.tex
+++ b/resume.tex
@@ -180,7 +180,7 @@ Python with TensorFlow and Caffe experience, OpenCV, MATLAB, ROS, C, C++,
 \headerrow
 	{\uline{Research Assistant} \textit{(UIUC)}}
 	{August 2017 - Present}
-	\begin{comment}
+	%\begin{comment}
 	\begin{itemize}
 		\item Developed online algorithm for unsupervised video object segmentation based on clustering of dense optical flow
 		\item Investigated real-time trackers based on discriminative correlation filters
@@ -188,29 +188,37 @@ Python with TensorFlow and Caffe experience, OpenCV, MATLAB, ROS, C, C++,
 resolution depth maps using electronically scanning RADAR (ESR) sensors found on
 modern cars paired with video
 	\end{itemize}
-	\end{comment}
-	\newline %comment out if including itemize info
+	%\end{comment}
+	%\newline %comment out if including itemize info
 
 %% SwRI
 \headerrow
 	{\uline{Graduate Student in Critical Systems Department} \textit{(Southwest Research Institute)}}
-	{May 2017 - August 2017}
-	\begin{itemize}
-		\item Trained and tested convolutional neural networks for methane leak detection and segmentation to be implemented on an NVIDIA Tegra embedded platform
-		\item Implemented a parallelized data simulator from MATLAB code in Python to generate training and testing datasets
-		\item Trained several shallow, efficient networks for preliminary investigation for an internal research project
+	{May 2017 - Present}
+	\begin{itemize}[leftmargin=*]
+		\item[] Summer 2017
+			\begin{itemize}
+				\item Trained and tested convolutional neural networks for methane leak detection and segmentation to be implemented on an NVIDIA Tegra embedded platform
+				\item Implemented a parallelized data simulator from MATLAB code in Python to generate training and testing datasets
+				\item Trained several shallow, efficient networks for preliminary investigation for an internal research project
+			\end{itemize}
+		\item[] Summer 2018
+			\begin{itemize} 
+				\item Investigated the use of computer vision features with convolutional neural networks for gas leak flow rate quantification
+				\item Developed algorithms for predicting anomalous events in high dimensional, multi-sensor time series data 
+			\end{itemize}
 	\end{itemize}
 
 %% ECE 110 TAing
 \headerrow
 	{\uline{Introduction to Electronics Lab Teaching Assistant} \textit{(UIUC)}}
 	{August 2016 - December 2017}
-	\begin{comment}
+	%\begin{comment}
 	\begin{itemize}
 		\item Led basic electronics lab sessions weekly and graded lab reports weekly
 	\end{itemize}
-	\end{comment}
-	\newline %comment out if including itemize info
+	%\end{comment}
+	%\newline %comment out if including itemize info
 
 %% Undergrad
 	\begin{comment}
