Updated to add Sandia & trimmed for qual report

--- a/resume.tex
+++ b/resume.tex
@@ -180,7 +180,7 @@ Python with TensorFlow and Caffe experience, OpenCV, MATLAB, ROS, C, C++,
 \headerrow
 	{\uline{Research Assistant} \textit{(UIUC)}}
 	{August 2017 - Present}
-	%\begin{comment}
+	\begin{comment}
 	\begin{itemize}
 		\item Developed online algorithm for unsupervised video object segmentation based on clustering of dense optical flow
 		\item Investigated real-time trackers based on discriminative correlation filters
@@ -188,14 +188,27 @@ Python with TensorFlow and Caffe experience, OpenCV, MATLAB, ROS, C, C++,
 resolution depth maps using electronically scanning RADAR (ESR) sensors found on
 modern cars paired with video
 	\end{itemize}
-	%\end{comment}
-	%\newline %comment out if including itemize info
+	\end{comment}
+	\newline %comment out if including itemize info
+	
+%% SNL
+\headerrow
+	{\uline{Graduate Student Intern} \textit{(Sandia National Laboratories)}}
+	{September 2018 - Present}
+	\begin{comment}
+		\begin{itemize}
+			\item Member of the Sensor Specific Processing team
+				working on the transient detection pipeline
+		\end{itemize}
+	\end{comment}
+	\newline
 
 %% SwRI
 \headerrow
 	{\uline{Graduate Student in Critical Systems Department} \textit{(Southwest Research Institute)}}
-	{May 2017 - Present}
-	\begin{itemize}[leftmargin=*]
+	{May 2017 - August 2018}
+	\begin{comment}
+	\begin{itemize}%[leftmargin=*]
 		\item[] Summer 2017
 			\begin{itemize}
 				\item Trained and tested convolutional neural networks for methane leak detection and segmentation to be implemented on an NVIDIA Tegra embedded platform
@@ -208,16 +221,18 @@ modern cars paired with video
 				\item Developed algorithms for predicting anomalous events in high dimensional, multi-sensor time series data 
 			\end{itemize}
 	\end{itemize}
+	\end{comment}
+	\newline
 
 %% ECE 110 TAing
 \headerrow
 	{\uline{Introduction to Electronics Lab Teaching Assistant} \textit{(UIUC)}}
 	{August 2016 - December 2017}
-	%\begin{comment}
+	\begin{comment}
 	\begin{itemize}
 		\item Led basic electronics lab sessions weekly and graded lab reports weekly
 	\end{itemize}
-	%\end{comment}
+	\end{comment}
 	%\newline %comment out if including itemize info
 
 %% Undergrad
