updated SNL internship a little bit

--- a/resume.tex
+++ b/resume.tex
@@ -119,7 +119,7 @@ Honors: Summa Cum Laude with High Distinction
 %% --- SKILLS Section --- %%
 \begin{comment}
 \subsection*{\sansserif SKILLS:}
-Python with TensorFlow and Caffe experience, OpenCV, MATLAB, ROS, C, C++,
+Python with TensorFlow experience, OpenCV, MATLAB, ROS, 
 	Microsoft Office Suite, \LaTeX, Linux/Ubuntu, git, svn
 \end{comment}
 
@@ -199,6 +199,12 @@ modern cars paired with video
 		\begin{itemize}
 			\item Member of the Sensor Specific Processing team
 				working on the transient detection pipeline
+			\item Developed transient event data simulator with
+				ground truth for multiple profiles
+			\item Developed preliminary pipeline precision-recall
+				testing with synthesized data
+			\item Investigated unsupervised background estimation
+				for small, moving targets
 		\end{itemize}
 	\end{comment}
 	\newline
